# VSidoConn4Edison

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  buildenv.sh  index.html  install.sh  params.json
BattleGameJavascript/: battle.camera.js  battle.r2r.js  yuidoc.json
Config/: Makefile  sshd.socket  vsido.connect.service  vsido.streaming.text.service  vsido.streamingface.service  vsido.streamingmarker.service  vsido.streamingraw.service  vsido.usb.eth.service  vsido.web.debug.service  vsido.webcam.service  vsido.webroot.service  vsido.webserver.game.service  vsido.webserver.service
OpkgEnv/: Makefile  memo.txt
OpkgEnv/opkg/: arch.conf  opkg.conf
OpkgEnv/root/: .profile
OpkgEnv/samba/: smb.conf
Overlay/VSidoWeb/: CMakeLists.txt
RobotGame/: CMakeLists.txt  vsid.usb.eth.sh  webserver.game.sh
RobotGame/WebServerGame/: index.html
RobotGame/WebServerGame/OHDSample/: ReadIK.html  ReadServoAngle.html
RobotGame/WebServerGame/assets/css/: style.css
RobotGame/WebServerGame/assets/js/: battle.camera.js  game.js
RobotGame/WebServerGame/game/: player.html  tv.html
Setup/: intel-iotdk.conf  setenv.sh
Sound/: btspeaker.sh
VideoStreaming/MjpgServer/: CMakeLists.txt  MJPEStream.text.js  MJPEStream.text.sh
VideoStreaming/WebCameraApp/: CMakeLists.txt  VSido.cam.start  main.cpp
prebuild/: CMakeLists.txt  uvcvideo.ko
prebuild/opencv/: CMakeLists.txt  Makefile
prebuild/websockets/: libwebsockets.tar.bz
test/VSidoService/: main.cpp  test_dump.cpp  test_dump.hpp  test_request_acceleration.cpp  test_request_angle.cpp  (+3 more)
www/: install.sh
(+10 files in other folders)
