install(FILES webserver.game.sh PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ DESTINATION bin)
#install(FILES webserver.ux.game.sh PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ DESTINATION bin)
install(FILES vsid.usb.eth.sh PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ DESTINATION bin)
install(DIRECTORY WebServerGame DESTINATION share )
#install(DIRECTORY WebServerUXGame DESTINATION share )
